Reduce storage required for indexing - Tests update, updated logic of SP recovery, documentation updates