@@ -6,6 +6,7 @@ import ca.uhn.fhir.interceptor.api.HookParams;
 import ca.uhn.fhir.interceptor.api.IAnonymousInterceptor;
 import ca.uhn.fhir.interceptor.api.IInterceptorService;
 import ca.uhn.fhir.interceptor.api.Pointcut;
+import ca.uhn.fhir.interceptor.model.RequestPartitionId;
 import ca.uhn.fhir.jpa.api.config.JpaStorageSettings;
 import ca.uhn.fhir.jpa.api.dao.PatientEverythingParameters;
 import ca.uhn.fhir.jpa.entity.Search;
@@ -22,6 +23,7 @@ import ca.uhn.fhir.jpa.model.entity.ResourceIndexedSearchParamUri;
 import ca.uhn.fhir.jpa.model.entity.ResourceLink;
 import ca.uhn.fhir.jpa.model.entity.ResourceTable;
 import ca.uhn.fhir.jpa.model.search.StorageProcessingMessage;
+import ca.uhn.fhir.jpa.model.util.SearchParamHash;
 import ca.uhn.fhir.jpa.model.util.UcumServiceUtil;
 import ca.uhn.fhir.jpa.searchparam.MatchUrlService;
 import ca.uhn.fhir.jpa.searchparam.SearchParameterMap;
@@ -5335,12 +5337,15 @@ public class FhirResourceDaoR4SearchNoFtTest extends BaseJpaR4Test {
 			.setCode("MR");
 		IIdType id1 = myPatientDao.create(patient).getId().toUnqualifiedVersionless();
 
+		Long spHashIdentity = SearchParamHash.hashSearchParam(new PartitionSettings(),
+			RequestPartitionId.defaultPartition(), "Patient", "identifier:of-type");
 		runInTransaction(() -> {
 			List<ResourceIndexedSearchParamToken> params = myResourceIndexedSearchParamTokenDao
 				.findAll()
 				.stream()
-				.filter(t -> t.getParamName().equals("identifier:of-type"))
-				.collect(Collectors.toList());
+				.filter(t -> myStorageSettings.isIndexStorageOptimized() ? t.getHashIdentity().equals(spHashIdentity) :
+					t.getParamName().equals("identifier:of-type"))
+				.toList();
 			assertEquals(1, params.size());
 			assertNotNull(params.get(0).getHashSystemAndValue());
 			assertNull(params.get(0).getHashSystem());
